--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -27,7 +27,8 @@
     </div>
 
     <!-- Tableau PrimeNG avec pagination et responsive layout -->
-    <p-table [value]="filteredMaterials" [paginator]="true" [rows]="9" [responsiveLayout]="scroll">
+    <p-table *ngIf="!isLoading; else tableSkeleton" [value]="filteredMaterials" [paginator]="true" [rows]="9"
+      [responsiveLayout]="scroll">
       <ng-template pTemplate="header">
         <tr>
           <th>ID</th>
@@ -71,3 +72,11 @@
 <p-toast></p-toast>
 <app-create-material [display]="displayCreateMaterialDialog"
   (equipmentCreated)="handleEquipmentCreated()"></app-create-material>
+
+<ng-template #singleSkeleton>
+  <p-skeleton width="50%" height="22px"></p-skeleton>
+</ng-template>
+
+<ng-template #tableSkeleton>
+  <p-skeleton width="100%" height="600px"></p-skeleton>
+</ng-template>
