--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -25,7 +25,7 @@
           <div class="flex align-items-center justify-content-between mb-6 mt-2">
             <div class="flex align-items-center">
               <p-checkbox id="rememberme" [binary]="true" styleClass="mr-2"></p-checkbox>
-              <label for="rememberme2" class="text-sm">Mémoriser cet appareil</label>
+              <label for="rememberme" class="text-sm">Mémoriser cet appareil</label>
             </div>
             <a class="font-medium no-underline ml-2 text-blue-500 text-sm text-right cursor-pointer"
               routerLink="/auth/reset-password">Mot de passe oublié ?</a>
