--- a/src/app/admin/components/training-list/training-list.component.html
+++ b/src/app/admin/components/training-list/training-list.component.html
@@ -25,7 +25,7 @@
         </span>
       </div>
 
-      <p-button icon="pi pi-plus" label="Créer une parcours" class="custom-button"
+      <p-button icon="pi pi-plus" label="Créer un parcours" class="custom-button"
         (click)="showCreateTrainingDialog()"></p-button>
     </div>
 
