--- a/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
+++ b/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="availableEquipments.length === 0" class="equipment-selection">
+  <p>Aucun équipement à rajouter dans cette salle</p>
+
+</div>
+
 <div *ngIf="availableEquipments.length > 0" class="equipment-selection">
   <h3>Sélectionnez l'équipement à ajouter</h3>
 
