feat: Add functionality for creating degrees
This commit introduces the ability to create new degrees. The "Create Degree" component has been implemented to capture degree information, and the parent component has been updated to handle the creation event and refresh the list of degrees accordingly.

--- a/src/app/admin/components/degree-list/degree-list.component.html
+++ b/src/app/admin/components/degree-list/degree-list.component.html
@@ -24,6 +24,7 @@
         placeholder="Rechercher une formation"
       />
       <p-button
+        (click)="showCreateDegreeDialog()"
         icon="pi pi-plus"
         label="Créer une formation"
         class="custom-button"
@@ -99,3 +100,8 @@
 <!-- Confirmation Dialog and Toast Messages -->
 <p-confirmDialog icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <p-toast></p-toast>
+
+<app-create-degree
+  *ngIf="displayCreateDegreeDialog"
+  (degreeCreated)="refreshDegreeListAfterCreated($event)"
+></app-create-degree>
