Mise à jour sidenav

--- a/src/app/admin/components/degree-list/degree-list.component.html
+++ b/src/app/admin/components/degree-list/degree-list.component.html
@@ -1,12 +1,12 @@
 <!-- Dans components/degree-list/degree-list.component.html -->
 <div class="container">
-  <div
-    class="flex align-items-center border-round p-4"
-    style="background-color: rgb(239, 244, 255)"
-  >
+  <div class="flex align-items-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
     <div>
-      <h1 class="text-2xl font-semibold">Gestion des Formations</h1>
+      <h1 class="text-2xl font-semibold">Gestion des formations</h1>
       <p class="text-900 -mt-2">Créer, modifier ou supprimer des formations.</p>
+    </div>
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
+      <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px">
     </div>
   </div>
 
@@ -15,20 +15,10 @@
     <h1 class="text-lg font-medium">Formations</h1>
 
     <div class="flex justify-content-between mt-5 mb-4">
-      <input
-        class="w-4"
-        type="text"
-        pInputText
-        [(ngModel)]="searchQuery"
-        (input)="onSearch()"
-        placeholder="Rechercher une formation"
-      />
-      <p-button
-        (click)="showCreateDegreeDialog()"
-        icon="pi pi-plus"
-        label="Créer une formation"
-        class="custom-button"
-      ></p-button>
+      <input class="w-4" type="text" pInputText [(ngModel)]="searchQuery" (input)="onSearch()"
+        placeholder="Rechercher une formation" />
+      <p-button (click)="showCreateDegreeDialog()" icon="pi pi-plus" label="Créer une formation"
+        class="custom-button"></p-button>
     </div>
 
     <!-- Degree Table with PrimeNG -->
@@ -49,41 +39,16 @@
           </td>
           <td class="flex justify-content-evenly">
             <div *ngIf="!degree.isEditing">
-              <button
-                pButton
-                pRipple
-                pTooltip="Modifier"
-                tooltipPosition="top"
-                type="button"
-                icon="pi pi-pencil"
-                class="p-button-rounded p-button-text"
-                (click)="startEditing(degree)"
-              ></button>
-              <button
-                pButton
-                pRipple
-                pTooltip="Supprimer"
-                tooltipPosition="top"
-                icon="pi pi-trash"
-                class="p-button-rounded p-button-text p-button-danger"
-                (click)="confirmDelete(degree)"
-              ></button>
+              <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
+                class="p-button-rounded p-button-text" (click)="startEditing(degree)"></button>
+              <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(degree)"></button>
             </div>
             <div *ngIf="degree.isEditing">
-              <button
-                pButton
-                type="button"
-                label="Sauvegarder"
-                (click)="stopEditing(degree)"
-                class="p-button-success"
-              ></button>
-              <button
-                pButton
-                type="button"
-                label="Annuler"
-                (click)="cancelEditing(degree)"
-                class="p-button-secondary"
-              ></button>
+              <button pButton type="button" label="Sauvegarder" (click)="stopEditing(degree)"
+                class="p-button-success"></button>
+              <button pButton type="button" label="Annuler" (click)="cancelEditing(degree)"
+                class="p-button-secondary"></button>
             </div>
           </td>
         </tr>
@@ -101,7 +66,5 @@
 <p-confirmDialog icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <p-toast></p-toast>
 
-<app-create-degree
-  *ngIf="displayCreateDegreeDialog"
-  (degreeCreated)="refreshDegreeListAfterCreated($event)"
-></app-create-degree>
+<app-create-degree *ngIf="displayCreateDegreeDialog"
+  (degreeCreated)="refreshDegreeListAfterCreated($event)"></app-create-degree>
