--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-
-  <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255);">
+  <div class="flex align-items-center border-round p-4 relative" style="background-color: rgb(239, 244, 255);">
     <div>
       <h1 class="text-2xl font-semibold">Gestion des équipements</h1>
       <p class="text-900 -mt-2">Créer, modifier ou supprimer des équipements.</p>
