--- a/src/app/admin/components/students/students.component.html
+++ b/src/app/admin/components/students/students.component.html
@@ -75,7 +75,9 @@ dataKey="id"
         </tr>
     </ng-template>
 </p-table>
-<p-button routerLink="add" label="Ajouter un étudiant" [rounded]="true" ></p-button>
+<p-button routerLink="add" label="Ajouter un étudiant" [rounded]="true"  [style]="{ 'margin-right.px': 20 } " ></p-button>
+
+<p-button routerLink="add_csv" label="Ajouter des étudiants via CSV" [rounded]="true"  ></p-button>
 
 
 
