Amélioration page salles de classe

--- a/src/app/admin/components/classrooms/classrooms.component.html
+++ b/src/app/admin/components/classrooms/classrooms.component.html
@@ -1,12 +1,96 @@
-<h1>Salles de classes</h1>
-<div>
-  <button class="w3-button w3-green w3-round" (click)="openModal()">
-    <i class="pi pi-plus"></i> Créer une classe
-  </button>
+<div class="container">
+
+  <div class="flex align-items-center border-round p-4 relative" style="background-color: rgb(239, 244, 255)">
+    <div>
+      <h1 class="text-2xl font-semibold">Gestion des salles de classe</h1>
+      <p class="text-900 -mt-2">Créer, gérer les équipements ou supprimer des salles de classe.</p>
+    </div>
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
+      <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px">
+    </div>
+  </div>
+
+  <div class="shadow-1 border-round mt-7 p-4 pt-2">
+    <h1 class="text-lg font-medium">Salles de classe</h1>
+
+    <div class="flex justify-content-between mt-5 mb-4">
+      <div>
+        <span class="p-input-icon-left">
+          <i class="pi pi-search mb-3"></i>
+          <input pInputText type="text" #searchInput placeholder="Rechercher une salle"
+            (input)="dt2.filterGlobal(searchInput.value, 'contains')" />
+        </span>
+      </div>
+
+      <p-button icon="pi pi-plus" label="Créer une salle" class="custom-button" (click)="openModal()"></p-button>
+    </div>
+
+    <p-table #dt2 [value]="classrooms" dataKey="id" [rows]="10" [showCurrentPageReport]="true"
+      [rowsPerPageOptions]="[5, 10, 20, 50, 100]" [paginator]="true"
+      currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} salles de classe"
+      [globalFilterFields]="['name', 'capacity']">
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th width="200px">ID</th>
+          <th>Nom de la salle</th>
+          <th>Capacité</th>
+          <th width="300px"></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-classroom>
+        <tr>
+          <td>
+            #{{ classroom.id }}
+          </td>
+          <td>
+            <div *ngIf="!classroom.isEditing">
+              {{ classroom.name }}
+            </div>
+            <div *ngIf="classroom.isEditing">
+              <input pInputText type="text" [(ngModel)]="classroom.editedName" />
+            </div>
+          </td>
+          <td>
+            <div *ngIf="!classroom.isEditing">
+              {{ classroom.capacity }}
+            </div>
+            <div *ngIf="classroom.isEditing">
+              <input pInputText type="number" [(ngModel)]="classroom.editedCapacity" />
+            </div>
+          </td>
+          <td>
+            <div *ngIf="!classroom.isEditing">
+              <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
+                class="p-button-rounded p-button-text" (click)="startEdit(classroom)"></button>
+              <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(classroom)"></button>
+              <button pButton pRipple pTooltip="Gérer le matériel" tooltipPosition="top" icon="pi pi-desktop"
+                class="p-button-rounded p-button-text p-button-secondary"
+                [routerLink]="['/admin/classrooms', classroom.id]"></button>
+
+            </div>
+            <div *ngIf="classroom.isEditing">
+              <button pButton pRipple pTooltip="Sauvegarder" tooltipPosition="top" type="button" icon="pi pi-check"
+                class="p-button-rounded p-button-text p-button-success" (click)="confirmUpdate(classroom)"></button>
+              <button pButton pRipple pTooltip="Annuler" tooltipPosition="top" icon="pi pi-times"
+                class="p-button-rounded p-button-text p-button-danger" (click)="cancelEdit(classroom)"></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="4">Aucune salles de classe.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
 
 <!-- Fenêtre modale -->
-
 <p-dialog header="Créer une classe" [(visible)]="displayModal" [modal]="true" class="custom-dialog">
   <form [formGroup]="classroomForm" class="custom-form">
     <div class="form-group">
@@ -19,120 +103,19 @@
     </div>
     <div class="p-dialog-footer">
       <button type="button" pButton (click)="closeModal()" label="Annuler" class="w3-button w3-grey w3-round"></button>
-      <button type="button" pButton (click)="createClassroom()" label="Créer" class="w3-button w3-blue w3-round"></button>
+      <button type="button" pButton (click)="createClassroom()" label="Créer"
+        class="w3-button w3-blue w3-round"></button>
     </div>
   </form>
 </p-dialog>
 
-
-<p-table
-  #dt2
-  [value]="classrooms"
-  dataKey="id"
-  [rows]="10"
-  [showCurrentPageReport]="true"
-  [rowsPerPageOptions]="[10, 25, 50]"
-  [loading]="loading"
-  [paginator]="true"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-  [globalFilterFields]="['name', 'capacity']"
-  [tableStyle]="{ 'min-width': '75rem' }"
-  class="shadow-1 border-round mt-7 p-4 pt-2"
->
-  <ng-template pTemplate="caption">
-    <div class="flex">
-      <span class="p-input-icon-left ml-auto">
-        <i class="pi pi-search"></i>
-        <input
-          pInputText
-          type="text"
-          #searchInput
-          placeholder="Rechercher une salle"
-          (input)="dt2.filterGlobal(searchInput.value, 'contains')"
-        />
-      </span>
-    </div>
-  </ng-template>
-
-  <ng-template pTemplate="header">
-    <tr>
-      <th style="width: 25%">Id</th>
-      <th style="width: 25%">Salle</th>
-      <th style="width: 25%">Capacité</th>
-      <th style="width: 25%">Actions</th>
-    </tr>
-  </ng-template>
-
-  <ng-template pTemplate="body" let-classroom>
-    <tr>
-      <td>
-        {{ classroom.id }}
-      </td>
-      <td>
-        <div *ngIf="!classroom.isEditing">
-          {{ classroom.name }}
-        </div>
-        <div *ngIf="classroom.isEditing">
-          <input type="text" [(ngModel)]="classroom.editedName" />
-        </div>
-      </td>
-      <td>
-        <div *ngIf="!classroom.isEditing">
-          {{ classroom.capacity }}
-        </div>
-        <div *ngIf="classroom.isEditing">
-          <input type="number" [(ngModel)]="classroom.editedCapacity" />
-        </div>
-      </td>
-      <td>
-        <div *ngIf="!classroom.isEditing">
-          <button
-            class="w3-button w3-blue w3-round"
-            (click)="startEdit(classroom)"
-          >
-            <i class="pi pi-pencil"></i>
-          </button>
-          <button
-            class="w3-button w3-red w3-round"
-            (click)="confirmDelete(classroom)"
-          >
-            <i class="pi pi-trash"></i> 
-          </button>
-          <button
-            class="w3-button w3-green w3-round"
-            [routerLink]="['/admin/classrooms', classroom.id]"
-          >
-            <i class="pi pi-desktop"></i> Matériel
-          </button>
-          <!-- Autres actions -->
-        </div>
-        <div *ngIf="classroom.isEditing">
-          <button
-            class="w3-button w3-green w3-round"
-            (click)="confirmUpdate(classroom)"
-          >
-            <i class="pi pi-check"></i>
-          </button>
-          <button
-            class="w3-button w3-red w3-round"
-            (click)="cancelEdit(classroom)"
-          >
-            <i class="pi pi-times"></i>
-          </button>
-        </div>
-      </td>
-    </tr>
-  </ng-template>
-
-  <ng-template pTemplate="emptymessage">
-    <tr>
-      <td colspan="4">Pas de salles de classes.</td>
-    </tr>
-  </ng-template>
-</p-table>
-<p-confirmDialog
-  header="Confirmation"
-  icon="pi pi-exclamation-triangle"
-></p-confirmDialog>
-
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <p-toast></p-toast>
+
+<ng-template #singleSkeleton>
+  <p-skeleton width="30%" height="22px"></p-skeleton>
+</ng-template>
+
+<ng-template #tableSkeleton>
+  <p-skeleton width="100%" height="600px"></p-skeleton>
+</ng-template>
